# vcpkg-integrated-with-cmake

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
